
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Sep-9 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+eeschema
    Fixed a bug plotting pins with circles in them from eeschema.
    Added type FILL_T.


2008-Aug-26 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all:
    subtle bug solved: no response to the first left click command after opening a dialog box
    (after an item edition, for instance)

2008-Aug-22 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
    bug solved: netlist calculations could crash eeschema under very rare circumstances.
    recent bug solved: background filled shapes (filled but not solid: texts are readables inside shapes)
        were drawn (and plotted) as filled (solid) shapes

2008-Aug-18 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    bug solved: Horizontal Oblong pads holes have a bad T Code size in the drill file.


2008-Aug-15 UPDATE   Jerry Jacobs <jerkejacobs@gmail.com>
================================================================================
+About dialog
modified: (common.cpp) GetAboutBuildVersion() is a custom build version for the about dialog
          (config.h.cmake)
          (CreateSVNVersionHeader.cmake) KICAD_ABOUT_VERSION macro added

added:  (about_dialog.cpp) InitKiCadAbout() initalise the about dialog

removed: (common/infospgm.cpp) is no longer needed


2008-Aug-11 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
    libedit: